--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,15 @@
 name = "OverturningCells"
 authors = ["Nathanael Wong <natgeo.wong@outlook.com>"]
-[compat]
-julia = "1.5.1"
+
 [deps]
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+DelimitedFiles = "8bb1440f-4735-579b-a4ab-409b98df4dab"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+IscaTools = "bbcbd578-9e06-4913-a16c-0f12dae524fe"
+Logging = "56ddb016-857b-54e1-b83d-db4d58db5568"
+NCDatasets = "85f8d34a-cbdd-5861-8df4-14fed0d494ab"
+Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+
+[compat]
+julia = "1"
